# codeatlas

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  converge.json
.github/workflows/: ci.yml  converge.yml
codeatlas-mcp/: package-lock.json  package.json
codeatlas-mcp/src/: codeatlas.ts  index.ts  registry.test.ts  resources.ts  tools.ts
docs/: ARCHITECTURE.md  DEVELOPMENT.md
src/: main.rs
src/analyzer/: community.rs  mod.rs  process.rs
src/analyzer/resolver/: calls.rs  imports.rs  inheritance.rs  mod.rs
src/cli/: clusters_cmd.rs  context_cmd.rs  dataflow_cmd.rs  embed_cmd.rs  eval_cmd.rs  graph_query_cmd.rs  impact_batch_cmd.rs  impact_cmd.rs  index.rs  metrics.rs  mod.rs  processes_cmd.rs  query_cmd.rs  status.rs  subgraph_cmd.rs
src/embedder/: mod.rs
src/eval/: mod.rs
src/parser/: mod.rs
src/parser/calls/: go.rs  mod.rs  ruby.rs  typescript.rs
src/parser/dataflow/: go.rs  mod.rs  ruby.rs  typescript.rs
src/parser/extract/: go.rs  mod.rs  ruby.rs  typescript.rs
src/parser/imports/: go.rs  mod.rs  ruby.rs  typescript.rs
src/query/: mod.rs
src/scanner/: mod.rs
src/storage/: mod.rs  read.rs  write.rs
testdata/benchmark/go-cli/: expected.json  main.go
testdata/benchmark/go-cycle/: go.mod  main.go
testdata/benchmark/go-iface-sig/: go.mod  main.go
testdata/benchmark/ruby-service/: expected.json
testdata/benchmark/ts-webapp/: expected.json
testdata/eval/: go-cli.json  ruby-service.json  ts-webapp.json
testdata/project/src/: admin.ts  app.rb  handler.go  (+4 more)
testdata/sample/: auth.ts  handler.go  user.rb
tests/: integration_test.rs
(+38 files in other folders)
